# binary

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  LICENSE-APACHE  LICENSE-MIT  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  test.yml
binary/: __init__.py  core.py  utils.py
tests/: test_core.py
