[metadata]
name = 'binary'
version = '0.0.1'
description = ''
author = 'Ofek Lev'
author_email = 'ofekmeister@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/ofek/binary'

[requires]
python_version = ['3.6', '3.7', '3.8', '3.9', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
