[metadata]
name = 'binary'
version = '0.0.1'
description = ''
author = 'Ofek Lev'
author_email = 'ofekmeister@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/ofek/binary'

[requires]
python_version = ['3.7', '3.8', '3.9', '3.10', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'

[tool.mypy]
pretty = true
show_error_codes = true
strict = true
