[metadata]
name = binary
version = attr: binary.__version__
long_description = file: README.rst
author = Ofek Lev
author_email = ofekmeister@gmail.com
maintainer = Ofek Lev
maintainer_email = ofekmeister@gmail.com
url = https://github.com/ofek/binary
license = MIT/Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7
packages = binary

[options.package_data]
binary = py.typed
